feat: add some CRUD operations, break down the project by files
